@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed Fl_Text_Display Tabulator calculations (STR #2450)
 	- Fixed file access code to use UTF-8 strings (STR #2440)
 	- Fixed ARM Unicode cross compilation issue (STR #2432)
 	- Improved support for faulty X11 clients (STR #2385)
